Testando alternativas para o problema do Scipt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <h1>Título</h1>
   <section id="div">
-    <p id="msg"></p>
+    <p id="msg1"></p>
+    <p id="msg2"></p>
   </section>
   <script src="script.js"></script>
 </body>
