--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <h1>Título</h1>
   <section id="div">
-    <p id="msg1"></p>
-    <p id="msg2"></p>
+    <p id="msg"></p>
   </section>
   <script src="script.js"></script>
 </body>
