--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-  <h1>Título</h1>
+  <h1>O Game do Poder</h1>
   <section id="div">
     <p id="msg"></p>
+    <button id="button" onclick="Sortear()">Jogar Dado</button>
+    <p id="msg2"></p>
   </section>
   <script src="script.js"></script>
 </body>
